--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,15 @@
-*.class
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
-*.jar
-*.war
-*.ear
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
+*~
+target
+.classpath
+.project
+.settings
+*orig
+.springBeans
+*tmp/
+*backup
+*Backup
+log.xml
+nbactions.xml
+*bower_components/
+.externalToolBuilders
+*bin/
