--- a/openvidu-browser/src/main/resources/ts/tsconfig.json
+++ b/openvidu-browser/src/main/resources/ts/tsconfig.json
@@ -1,7 +1,7 @@
 {
 	"compilerOptions": {
 		"target": "es5",
-		"module": "system",
+		"module": "commonjs",
 		//"noImplicitAny": true,
 		"noImplicitThis": true,
 		//"noUnusedLocals": true,
