--- a/openvidu-browser/src/main/resources/package.json
+++ b/openvidu-browser/src/main/resources/package.json
@@ -4,10 +4,11 @@
 	"description": "OpenVidu Browser",
 	"main": "OpenVidu.js",
 	"scripts": {
+		"browserify": "cd ts && watchify Main.ts -p [ tsify ] --exclude kurento-browser-extensions --debug -o ../static/js/OpenVidu.js -v",
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
 	"author": "",
-	"license": "ISC",
+	"license": "Apache-2.0",
 	"dependencies": {
 		"kurento-jsonrpc": "5.1.3",
 		"wolfy87-eventemitter": "4.2.9",
