Secure OpenviduServer set up

--- a/openvidu-server/pom.xml
+++ b/openvidu-server/pom.xml
@@ -132,6 +132,10 @@
 			<artifactId>powermock-api-mockito</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
 	</dependencies>
 
 	<profiles>
