--- a/openvidu-sample-app/pom.xml
+++ b/openvidu-sample-app/pom.xml
@@ -25,13 +25,22 @@
   	<build>
   
 	  	<finalName>${project.artifactId}-${project.version}</finalName>
+	  	
+	  	<resources>
+            <resource>
+                <filtering>true</filtering>
+                <directory>src/main/resources</directory>
+                <excludes>
+                    <exclude>frontend/**</exclude>
+                </excludes>
+            </resource>
+        </resources>
 	  
 	  	<plugins>
 	  	
 		    <plugin>
 		        <groupId>org.springframework.boot</groupId>
 		        <artifactId>spring-boot-maven-plugin</artifactId>
-		        <!-- ONLY ON DEVELOPMENT -->
 		        <dependencies>
 	            	<dependency>
 	                	<groupId>org.springframework</groupId>
@@ -39,7 +48,6 @@
 	                	<version>1.2.6.RELEASE</version>
 	            	</dependency>
 	        	</dependencies>
-	        	<!-- ONLY ON DEVELOPMENT -->
 		    </plugin>
 		    
 		    <plugin>
@@ -60,6 +68,7 @@
 		                    <filtering>true</filtering>
 		                </resource>
 		            </webResources>
+		            <packagingExcludes>src/main/resources/frontend/**</packagingExcludes>
 		        </configuration>
 		    </plugin>
 		    
@@ -118,9 +127,13 @@
 		<dependency>
 		    <groupId>org.apache.httpcomponents</groupId>
 		    <artifactId>httpclient</artifactId>
-		    <version>4.5</version>
 		</dependency>
 		
+		<dependency>
+		    <groupId>org.openvidu</groupId>
+		    <artifactId>openvidu-backend-client</artifactId>
+		    <version>0.0.1-SNAPSHOT</version>
+		</dependency>
 	
   	</dependencies>
 </project>
