Server security (de)activation by property

--- a/openvidu-sample-app/src/main/resources/application.properties
+++ b/openvidu-sample-app/src/main/resources/application.properties
@@ -1,7 +1,9 @@
-spring.datasource.url=jdbc:mysql://localhost/full_teaching
-spring.datasource.username=ft-root
-spring.datasource.password=pass
-spring.datasource.driverClassName=com.mysql.jdbc.Driver
+server.port: 5000
+
+spring.datasource.url: jdbc:mysql://localhost/full_teaching
+spring.datasource.username: ft-root
+spring.datasource.password: pass
+spring.datasource.driverClassName: com.mysql.jdbc.Driver
 spring.jpa.hibernate.ddl-auto: create-drop
 
-server.port=5000
+openvidu.secret: MY_SECRET
