--- a/openvidu-server/src/main/resources/application.properties
+++ b/openvidu-server/src/main/resources/application.properties
@@ -4,3 +4,6 @@ server.ssl.key-store: classpath:keystore.jks
 server.ssl.key-store-password: kurento
 server.ssl.keyStoreType: JKS
 server.ssl.keyAlias: kurento-selfsigned
+
+openvidu.secret: MY_SECRET
+openvidu.security: true
