OpenVidu + OpenViduTokBox Interfaces

--- a/openvidu-browser/src/main/resources/ts/OpenVidu/tsconfig.json
+++ b/openvidu-browser/src/main/resources/ts/OpenVidu/tsconfig.json
@@ -18,7 +18,7 @@
 		"forceConsistentCasingInFileNames": true,
 		"allowSyntheticDefaultImports": true,
 		"strictNullChecks": true,
-		"outDir": "../lib",
+		"outDir": "../../lib/OpenVidu",
 		"emitBOM": false,
 		"preserveConstEnums": true,
 		"sourceMap": true
