videoElementCreated event emitted by Publisher and Subscriber

--- a/openvidu-server/src/main/resources/application.properties
+++ b/openvidu-server/src/main/resources/application.properties
@@ -6,4 +6,4 @@ server.ssl.keyStoreType: JKS
 server.ssl.keyAlias: kurento-selfsigned
 
 openvidu.secret: MY_SECRET
-openvidu.security: true
+openvidu.security: false
