--- a/openvidu-server/pom.xml
+++ b/openvidu-server/pom.xml
@@ -45,7 +45,7 @@
 			<organizationUrl>http://www.kurento.org</organizationUrl>
 		</developer>
 	</developers>
-	
+
 	<properties>
 		<!-- Main class -->
 		<start-class>org.openvidu.server.OpenViduServer</start-class>
@@ -65,8 +65,27 @@
 				</includes>
 			</resource>
 		</resources>
-		
+
 		<plugins>
+
+
+			<plugin>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
+				<configuration>
+					<mainClass>${start-class}</mainClass>
+					<layout>ZIP</layout>
+				</configuration>
+				<executions>
+					<execution>
+						<goals>
+							<goal>repackage</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+
+
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>exec-maven-plugin</artifactId>
@@ -77,7 +96,7 @@
 		</plugins>
 	</build>
 
-	<dependencies>		
+	<dependencies>
 		<dependency>
 			<groupId>org.kurento</groupId>
 			<artifactId>kurento-jsonrpc-server</artifactId>
@@ -101,7 +120,7 @@
 			<groupId>org.mockito</groupId>
 			<artifactId>mockito-core</artifactId>
 			<scope>test</scope>
-		</dependency>	
+		</dependency>
 		<dependency>
 			<groupId>org.kurento</groupId>
 			<artifactId>kurento-client</artifactId>
@@ -138,34 +157,12 @@
 		</dependency>
 	</dependencies>
 
-	<profiles>
-		<profile>
-			<id>default</id>
-			<activation>
-				<property>
-					<name>default</name>
-					<value>true</value>
-				</property>
-			</activation>
-			<build>
-				<plugins>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-surefire-plugin</artifactId>
-						<configuration>
-							<skipTests>true</skipTests>
-						</configuration>
-					</plugin>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-failsafe-plugin</artifactId>
-						<configuration>
-							<skipTests>true</skipTests>
-						</configuration>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>
-	</profiles>
+	<!-- <profiles> <profile> <id>default</id> <activation> <property> <name>default</name> 
+		<value>true</value> </property> </activation> <build> <plugins> <plugin> 
+		<groupId>org.apache.maven.plugins</groupId> <artifactId>maven-surefire-plugin</artifactId> 
+		<configuration> <skipTests>true</skipTests> </configuration> </plugin> <plugin> 
+		<groupId>org.apache.maven.plugins</groupId> <artifactId>maven-failsafe-plugin</artifactId> 
+		<configuration> <skipTests>true</skipTests> </configuration> </plugin> </plugins> 
+		</build> </profile> </profiles> -->
 
 </project>
