--- a/openvidu-sample-app/src/main/resources/application.properties
+++ b/openvidu-sample-app/src/main/resources/application.properties
@@ -1,9 +1,10 @@
 server.port: 5000
 
-spring.datasource.url: jdbc:mysql://localhost/openvidu_sample_app
-spring.datasource.username: root
+spring.datasource.url: jdbc:mysql://mysql:3307/demo
+spring.datasource.username: demo_user
 spring.datasource.password: pass
 spring.datasource.driverClassName: com.mysql.jdbc.Driver
+spring.jpa.database: MYSQL
 spring.jpa.hibernate.ddl-auto: create-drop
 
 openvidu.secret: MY_SECRET
