openvidu-server REST API returns JSON instead of plain/text

--- a/openvidu-server/pom.xml
+++ b/openvidu-server/pom.xml
@@ -155,6 +155,10 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
+		<dependency>
+		    <groupId>com.googlecode.json-simple</groupId>
+		    <artifactId>json-simple</artifactId>
+		</dependency>
 	</dependencies>
 
 	<!-- <profiles> <profile> <id>default</id> <activation> <property> <name>default</name> 
