--- a/openvidu-client/pom.xml
+++ b/openvidu-client/pom.xml
@@ -11,11 +11,11 @@
 	<artifactId>openvidu-client</artifactId>
 	<packaging>jar</packaging>
 
-	<name>Kurento Room Client</name>
+	<name>OpenVidu Client</name>
 	<description>
-        Kurento Room library for the client-side of Kurento Room Server
+        OpenVidu client library for the client-side of OpenVidu Server
     </description>
-	<url>http://www.kurento.org/docs/${project.version}</url>
+	<url>https://github.com/OpenVidu/openvidu</url>
 
 	<licenses>
 		<license>
@@ -26,8 +26,8 @@
 	</licenses>
 
 	<organization>
-		<name>Kurento</name>
-		<url>http://www.kurento.org</url>
+		<name>OpenVidu</name>
+		<url>https://github.com/OpenVidu/openvidu</url>
 	</organization>
 
 	<scm>
@@ -39,10 +39,10 @@
 
 	<developers>
 		<developer>
-			<id>kurento.org</id>
-			<name>-kurento.org Community</name>
-			<organization>Kurento.org</organization>
-			<organizationUrl>http://www.kurento.org</organizationUrl>
+			<id>openvidu.org</id>
+			<name>-openvidu.org Community</name>
+			<organization>OpenVidu.org</organization>
+			<organizationUrl>https://github.com/OpenVidu/openvidu</organizationUrl>
 		</developer>
 	</developers>
 
