--- a/openvidu-testapp/pom.xml
+++ b/openvidu-testapp/pom.xml
@@ -16,7 +16,7 @@
 	<description>
 			This project contains a minimal sample app using OpenVidu platorm.
 	</description>
-	<url>http://www.kurento.org/docs/${project.version}</url>
+	<url>https://github.com/OpenVidu/openvidu</url>
 
 	<licenses>
 		<license>
@@ -27,8 +27,8 @@
 	</licenses>
 
 	<organization>
-		<name>Kurento</name>
-		<url>http://www.kurento.org</url>
+		<name>OpenVidu</name>
+		<url>https://github.com/OpenVidu/openvidu</url>
 	</organization>
 
 	<scm>
@@ -40,16 +40,16 @@
 
 	<developers>
 		<developer>
-			<id>kurento.org</id>
-			<name>-kurento.org Community</name>
-			<organization>Kurento.org</organization>
-			<organizationUrl>http://www.kurento.org</organizationUrl>
+			<id>openvidu.org</id>
+			<name>-openvidu.org Community</name>
+			<organization>OpenVidu.org</organization>
+			<organizationUrl>https://github.com/OpenVidu/openvidu</organizationUrl>
 		</developer>
 	</developers>
 
 	<properties>
 		<!-- Main class -->
-		<start-class>org.openvidu.room.basic.KurentoRoomBasicApp</start-class>
+		<start-class>org.openvidu.testapp.OpenViduTestApp</start-class>
 	</properties>
 
 	<build>
