'kms.uris' property added to openvidu-server 'application.properties'

--- a/openvidu-server/src/main/resources/application.properties
+++ b/openvidu-server/src/main/resources/application.properties
@@ -5,5 +5,7 @@ server.ssl.key-store-password: kurento
 server.ssl.keyStoreType: JKS
 server.ssl.keyAlias: kurento-selfsigned
 
+kms.uris=[\"ws://localhost:8888/kurento\"]
+
 openvidu.secret: MY_SECRET
 openvidu.security: true
