Trying an advanced secure app demo is a piece of cake now

--- a/openvidu-sample-app/src/main/resources/application.properties
+++ b/openvidu-sample-app/src/main/resources/application.properties
@@ -7,4 +7,5 @@ spring.datasource.driverClassName: com.mysql.jdbc.Driver
 spring.jpa.database: MYSQL
 spring.jpa.hibernate.ddl-auto: create-drop
 
+openvidu.url: https://localhost:8443/
 openvidu.secret: MY_SECRET
