--- a/openvidu-demo/src/main/resources/application.properties
+++ b/openvidu-demo/src/main/resources/application.properties
@@ -5,3 +5,8 @@ server.ssl.key-store-password: kurento
 server.ssl.keyStoreType: JKS
 server.ssl.keyAlias: kurento-selfsigned
 server.context-path: /
+
+kms.uris=[\"ws://localhost:8888/kurento\"]
+
+openvidu.secret: MY_SECRET
+openvidu.security: true
