--- a/openvidu-server/pom.xml
+++ b/openvidu-server/pom.xml
@@ -56,6 +56,9 @@
 			<resource>
 				<directory>src/main/resources</directory>
 				<filtering>false</filtering>
+				<excludes>
+                    <exclude>frontend/**</exclude>
+                </excludes>
 			</resource>
 			<resource>
 				<directory>src/main/resources</directory>
