--- a/openvidu-sample-app/src/main/resources/application.properties
+++ b/openvidu-sample-app/src/main/resources/application.properties
@@ -1,4 +1,9 @@
 server.port: 5000
+server.ssl.enabled: true
+server.ssl.key-store: classpath:openvidu-selfsigned.jks
+server.ssl.key-store-password: openvidu
+server.ssl.key-store-type: JKS
+server.ssl.key-alias: openvidu-selfsigned
 
 spring.datasource.url: jdbc:mysql://localhost/openvidu_sample_app
 spring.datasource.username: root
