--- a/openvidu-sample-app/src/main/resources/application-container.properties
+++ b/openvidu-sample-app/src/main/resources/application-container.properties
@@ -1,6 +1,11 @@
 spring.profiles.active=container
 
 server.port: 5000
+server.ssl.enabled: true
+server.ssl.key-store: classpath:openvidu-selfsigned.jks
+server.ssl.key-store-password: openvidu
+server.ssl.key-store-type: JKS
+server.ssl.key-alias: openvidu-selfsigned
 
 spring.datasource.url: jdbc:mysql://mysql:3306/openvidu_sample_app
 spring.datasource.username: op-root
