Frontend folder relocated into /src. New self-signed certificate

--- a/openvidu-server/src/main/resources/application.properties
+++ b/openvidu-server/src/main/resources/application.properties
@@ -1,9 +1,10 @@
 server.port: 8443
 server.address: 0.0.0.0
-server.ssl.key-store: classpath:keystore.jks
-server.ssl.key-store-password: kurento
-server.ssl.keyStoreType: JKS
-server.ssl.keyAlias: kurento-selfsigned
+server.ssl.enabled: true
+server.ssl.key-store: classpath:openvidu-selfsigned.jks
+server.ssl.key-store-password: openvidu
+server.ssl.key-store-type: JKS
+server.ssl.key-alias: openvidu-selfsigned
 
 kms.uris=[\"ws://localhost:8888/kurento\"]
 
