Update API Rest

--- a/openvidu-server/src/main/resources/application-ngrok.properties
+++ b/openvidu-server/src/main/resources/application-ngrok.properties
@@ -1,9 +1,10 @@
 spring.profiles.active=ngrok
 
 server.port: 5000
+server.ssl.enabled: false
 server.address: 0.0.0.0
 
 kms.uris=[\"ws://localhost:8888/kurento\"]
 
 openvidu.secret: MY_SECRET
-openvidu.security: true
+openvidu.security: false
