--- a/openvidu-browser/src/main/resources/package.json
+++ b/openvidu-browser/src/main/resources/package.json
@@ -1,6 +1,6 @@
 {
   "name": "openvidu-browser",
-  "version": "1.0.2",
+  "version": "1.0.3-beta.1",
   "description": "OpenVidu Browser",
   "main": "lib/OpenVidu/index.js",
   "types": "lib/OpenVidu/index.d.ts",
