--- a/openvidu-node-client/package.json
+++ b/openvidu-node-client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "openvidu-node-client",
-  "version": "1.0.0",
+  "version": "1.0.1-beta.1",
   "license": "MIT",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
