Update to version 1.0.0-beta.1

--- a/openvidu-browser/pom.xml
+++ b/openvidu-browser/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>io.openvidu</groupId>
 		<artifactId>openvidu</artifactId>
-		<version>0.0.1-SNAPSHOT</version>
+		<version>1.0.0-beta.1</version>
 	</parent>
 
 	<artifactId>openvidu-browser</artifactId>
