--- a/openvidu-testapp/src/main/resources/application.properties
+++ b/openvidu-testapp/src/main/resources/application.properties
@@ -3,3 +3,9 @@ server.ssl.key-store: classpath:keystore.jks
 server.ssl.key-store-password: kurento
 server.ssl.keyStoreType: JKS
 server.ssl.keyAlias: kurento-selfsigned
+
+kms.uris=[\"ws://localhost:8888/kurento\"]
+
+openvidu.secret: MY_SECRET
+openvidu.security: false
+openvidu.publicurl: local
