--- a/openvidu-server/src/angular/frontend/package.json
+++ b/openvidu-server/src/angular/frontend/package.json
@@ -26,7 +26,8 @@
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
     "rxjs": "^5.1.0",
-    "zone.js": "^0.8.4"
+    "zone.js": "^0.8.4",
+    "openvidu-browser": "1.0.3-beta.1"
   },
   "devDependencies": {
     "@angular/cli": "1.0.2",
