--- a/openvidu-java-client/pom.xml
+++ b/openvidu-java-client/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>io.openvidu</groupId>
 		<artifactId>openvidu</artifactId>
-		<version>1.0.0-beta.1</version>
+		<version>1.0.0-beta.3</version>
 	</parent>
 
 	<artifactId>openvidu-java-client</artifactId>
@@ -192,4 +192,5 @@
 			</build>
 		</profile>
 	</profiles>
+	<version>1.0.0-beta.3-SNAPSHOT</version>
 </project>
