--- a/openvidu-server/docker/openvidu-server-kms/Dockerfile
+++ b/openvidu-server/docker/openvidu-server-kms/Dockerfile
@@ -24,6 +24,7 @@ COPY openvidu-server.jar openvidu-server.jar
 
 EXPOSE 8888
 EXPOSE 9091
+EXPOSE 8443
 
 # Exec supervisord
 CMD ["/usr/bin/supervisord"]
