--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.kurento</groupId>
 		<artifactId>kurento-parent-pom</artifactId>
-		<version>6.6.2</version>
+		<version>6.6.3-SNAPSHOT</version>
 	</parent>
 
 	<groupId>io.openvidu</groupId>
@@ -52,7 +52,7 @@
 		<!-- OpenVidu versions -->
 		<version.openvidu>1.0.0-beta.3</version.openvidu>
 
-		<version.kurento.jsonrpc.js>5.1.3</version.kurento.jsonrpc.js>
+		<version.kurento.jsonrpc.js>5.1.4-SNAPSHOT</version.kurento.jsonrpc.js>
 
 		<maven.compiler.target>1.8</maven.compiler.target>
 		<maven.compiler.source>1.8</maven.compiler.source>
