--- a/openvidu-java-client/pom.xml
+++ b/openvidu-java-client/pom.xml
@@ -4,7 +4,7 @@
 
 	<parent>
 		<groupId>io.openvidu</groupId>
-		<artifactId>openvidu</artifactId>
+		<artifactId>openvidu-parent</artifactId>
 		<version>1.0.0-beta.3</version>
 	</parent>
 
@@ -12,7 +12,7 @@
 	<packaging>jar</packaging>
 
 	<name>OpenVidu Java Client</name>
-	<description> OpenVidu client for your Java backend: get sessionId's and tokens easily from your OpenVidu server</description>
+	<description>OpenVidu client for your Java backend: get sessionId's and tokens easily from your OpenVidu server</description>
 	<url>http://openvidu.io</url>
 
 	<licenses>
