--- a/openvidu-testapp/pom.xml
+++ b/openvidu-testapp/pom.xml
@@ -4,7 +4,7 @@
 
 	<parent>
 		<groupId>io.openvidu</groupId>
-		<artifactId>openvidu</artifactId>
+		<artifactId>openvidu-parent</artifactId>
 		<version>1.0.0-beta.3</version>
 		<relativePath>../</relativePath>
 	</parent>
