--- a/openvidu-browser/src/main/resources/package.json
+++ b/openvidu-browser/src/main/resources/package.json
@@ -22,5 +22,11 @@
     "kurento-utils": "6.6.2",
     "uuid": "~2.0.1",
     "sdp-translator": "^0.1.15"
+  },
+  "devDependencies": {
+    "typescript": "2.5.2",
+    "browserify": "14.4.0",
+    "tsify": "3.0.1",
+    "uglify-js": "3.0.15"
   }
 }
