--- a/openvidu-browser/src/main/resources/ts/OpenVidu/tsconfig.json
+++ b/openvidu-browser/src/main/resources/ts/OpenVidu/tsconfig.json
@@ -1,6 +1,6 @@
 {
 	"compilerOptions": {
-		"declaration": true,
+		"allowJs": true,
 		"target": "es5",
 		"module": "commonjs",
 		//"noImplicitAny": true,
