--- a/openvidu-client/pom.xml
+++ b/openvidu-client/pom.xml
@@ -5,10 +5,11 @@
 	<parent>
 		<groupId>io.openvidu</groupId>
 		<artifactId>openvidu-parent</artifactId>
-		<version>1.0.0-beta.3</version>
+		<version>1.0.0</version>
 	</parent>
 
 	<artifactId>openvidu-client</artifactId>
+	<version>1.0.0</version>
 	<packaging>jar</packaging>
 
 	<name>OpenVidu Client</name>
