--- a/openvidu-java-client/pom.xml
+++ b/openvidu-java-client/pom.xml
@@ -5,11 +5,11 @@
 	<parent>
 		<groupId>io.openvidu</groupId>
 		<artifactId>openvidu-parent</artifactId>
-		<version>1.0.0-beta.3</version>
+		<version>1.0.0</version>
 	</parent>
 
 	<artifactId>openvidu-java-client</artifactId>
-	<version>1.0.1-beta.3</version>
+	<version>1.0.0</version>
 	<packaging>jar</packaging>
 
 	<name>OpenVidu Java Client</name>
