--- a/openvidu-ng-testapp/package.json
+++ b/openvidu-ng-testapp/package.json
@@ -1,7 +1,7 @@
 {
   "name": "openvidu-ng-testapp",
-  "version": "0.0.0",
-  "license": "MIT",
+  "version": "1.0.0",
+  "license": "Apache-2.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
