--- a/openvidu-node-client/package.json
+++ b/openvidu-node-client/package.json
@@ -1,7 +1,7 @@
 {
   "name": "openvidu-node-client",
-  "version": "1.0.2-beta.3",
-  "license": "MIT",
+  "version": "1.0.0",
+  "license": "Apache-2.0",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
   "scripts": {
