--- a/openvidu-test/pom.xml
+++ b/openvidu-test/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>io.openvidu</groupId>
 		<artifactId>openvidu-parent</artifactId>
-		<version>1.0.0-beta.3</version>
+		<version>1.0.0</version>
 	</parent>
 
 	<artifactId>openvidu-test</artifactId>
