--- a/openvidu-browser/package.json
+++ b/openvidu-browser/package.json
@@ -2,6 +2,10 @@
   "name": "openvidu-browser",
   "version": "1.1.0",
   "description": "OpenVidu Browser",
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/OpenVidu/openvidu"
+  },
   "main": "lib/OpenVidu/index.js",
   "types": "lib/OpenVidu/index.d.ts",
   "scripts": {
