--- a/openvidu-server/src/angular/frontend/package.json
+++ b/openvidu-server/src/angular/frontend/package.json
@@ -27,7 +27,7 @@
     "hammerjs": "^2.0.8",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.4",
-    "openvidu-browser": "1.0.5-beta.3"
+    "openvidu-browser": "1.1.0"
   },
   "devDependencies": {
     "@angular/cli": "1.0.2",
