--- a/openvidu-node-client/package.json
+++ b/openvidu-node-client/package.json
@@ -1,7 +1,13 @@
 {
   "name": "openvidu-node-client",
   "version": "1.1.0",
+  "description": "OpenVidu Node Client",
+  "author": "OpenVidu",
   "license": "Apache-2.0",
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/OpenVidu/openvidu"
+  },
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
   "scripts": {
