--- a/openvidu-testapp/package.json
+++ b/openvidu-testapp/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-browser": "^4.2.4",
     "@angular/platform-browser-dynamic": "^4.2.4",
     "@angular/router": "^4.2.4",
+    "colormap": "^2.2.0",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
     "openvidu-browser": "1.1.0",
