--- a/openvidu-testapp/package.json
+++ b/openvidu-testapp/package.json
@@ -1,6 +1,6 @@
 {
   "name": "openvidu-testapp",
-  "version": "0.0.0",
+  "version": "1.1.0",
   "license": "Apache-2.0",
   "scripts": {
     "ng": "ng",
@@ -42,10 +42,10 @@
     "codelyzer": "~3.1.1",
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
-    "karma": "~1.7.0",
-    "karma-chrome-launcher": "~2.1.1",
+    "karma": "1.7.1",
+    "karma-chrome-launcher": "2.2.0",
     "karma-cli": "~1.0.1",
-    "karma-coverage-istanbul-reporter": "^1.2.1",
+    "karma-coverage-istanbul-reporter": "^1.3.0",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.1.2",
